// {C} Copyright 2019 Pensando Systems Inc. All rights reserved.

syntax = "proto3";

// Configure and manage the Orchestrator.
package orchestration;

import "google/api/annotations.proto";
import  public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

import "orchestration.proto";

//-------------------------------- R E S T / g R P C  A P I ----------------------------------------------------

service OrchestratorV1 {
    // Prefix for all resources served by this service.
    option (venice.apiPrefix) = "orchestration";
    // API Version.
    option (venice.apiVersion) = "v1";

    option(venice.apiGrpcCrudService) = "Orchestrator";

    option (venice.apiRestService) = {
        Object: "Orchestrator"
        Method: ["put", "get", "delete", "post", "list", "watch", "label"]
    };
}
